--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,62 +1,36 @@
-name: Deploy to Github Pages
+# This is a basic workflow to help you get started with Actions
 
+name: CI
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches:
-      - main
-      - fix
-      - feature
+    branches: ["main", "feature", "fix"]
+  pull_request:
+    branches: ["main", "feature", "fix"]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  deploy:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    outputs:
-      deploy_url: ${{ steps.set-vars.outputs.DEPLOY_URL }}
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
 
-      - name: Set environment variables
-        id: set-vars
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
         run: |
-          if [[ "${{ github.ref_name }}" == "main" ]]; then
-            echo "DEPLOY_ENV=production" >> $GITHUB_ENV
-            echo "APP_NAME=my-app-production" >> $GITHUB_ENV
-            echo "DEPLOY_URL=https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}" >> $GITHUB_ENV
-            echo "DEPLOY_URL=https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}" >> $GITHUB_OUTPUT
-          elif [[ "${{ github.ref_name }}" == "fix" ]]; then
-            echo "DEPLOY_ENV=fix" >> $GITHUB_ENV
-            echo "APP_NAME=my-app-fix" >> $GITHUB_ENV
-            echo "DEPLOY_URL=https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/fix" >> $GITHUB_ENV
-            echo "DEPLOY_URL=https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/fix" >> $GITHUB_OUTPUT
-          else
-            echo "DEPLOY_ENV=feature" >> $GITHUB_ENV
-            echo "APP_NAME=my-app-feature" >> $GITHUB_ENV
-            echo "DEPLOY_URL=https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/feature" >> $GITHUB_ENV
-            echo "DEPLOY_URL=https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/feature" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Generate config.json dynamically
-        run: echo '${{ secrets[format('{0}_CONFIG', env.DEPLOY_ENV)] }}' > config.json
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build
-        run: npm run build
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          destination_dir: ${{ github.ref_name == 'main' && '' || github.ref_name }}
-
-      - name: Print Deployment URL
-        run: echo "Deployment URL: $DEPLOY_URL"
+          echo Add other actions to build,
+          echo test, and deploy your project.
