--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,19 +27,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo $GITHUB_WORKSPACE
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-  hoge:
-    # test job
-    runs-on: ubuntu-latest
-
-    # job steps
-    steps:
-      - name: Run Run Ru
-        run: echo Run Run Ru - !
-      
